# openllm_func_call_synthesizer

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_ModelEvaluate.md  README_Susie.md  function_call.py  justfile  main.py  nohup_main.sh  nohup_start_apps_main.sh  pyproject.toml  test.py  test_one_data.ipynb
apps/: function_call.py  main.py  test.py
docs/: index.md  installation.md  usage.md
examples/: config.yaml  function_docs.example.json  function_docs.json
examples/conf/: config.yaml
examples/conf/llm/: default.yaml  ollama_only.yaml
examples/conf/synthesizer/: default.yaml  evaluation.yaml  susie.yaml  tool_query_hard_sample_20260112.yaml
examples/mcp_example_server/: server.py
examples/prompt_dict/: function_call_prompt.txt  mcp_intent_prompt_1204.txt  system_prompt_function_call_1120.txt  system_prompt_mcp.txt  system_prompt_mcp_1119.txt  system_prompt_uliya.txt
src/openllm_func_call_synthesizer/: __init__.py  __main__.py  cli.py
src/openllm_func_call_synthesizer/apps/: main.py
src/openllm_func_call_synthesizer/config/: config_manager.py
tests/: __init__.py  test_openllm_func_call_synthesizer.py
tests/Standard_Test_Local_Model/: README_CODE_STRUCTURE.md  README_EVALUATE_MODE.md  ReadMe.md  Test_Loacal_Model.py  Test_call_LLM_api.py  USAGE_EXAMPLE.md  calculate_confusion_matrix.py  change_data_to_function_call_format.py  config.yaml  llm_api_caller.py  llm_local_caller.py  main.py  main_backend.py  main_weiqi.py  parse_response_to_json.py  start_test.sh  test_api_function.py  test_one_data.ipynb  使用说明_API模式.md
tests/standard_test_local_model/: ReadMe.md  calculate_confusion_matrix.py  call_ollama_chat_api.py  change_data_to_function_call_format.py  llm_api_caller.py  llm_local_caller.py  main.py  main_susie.py  main_weiqi.py  nohup_start.sh  parse_response_to_json.py  start_test.sh  test_client_ollama_api.py  test_client_ollama_response.py  test_one.py  test_one_data.ipynb  test_one_v2.py  test_request_ollama_api.py  vllm_api_caller.py  使用说明_API模式.md
(+58 files in other folders)
